# CROlordCodelibrary

./: README.md
.git_broken_20260108_164146/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs  packed-refs.save
.git_broken_20260108_164146/logs/: HEAD
.git_broken_20260108_164146/objects/pack/: pack-4191f22eb6cc289b7748dc142ae7e68c3a726e2b.idx
Chapter1 Tool chain/Unit 2  docker-compose Jenkins/certs/: roliyal.key
Chapter2KubernetesApplicationBuild/Unit2CodeLibrary/Microservice/: Dockerfile  dynamic.yml  kubernetes-traefik.yaml  treaefik-nacos.yml
Chapter2KubernetesApplicationBuild/Unit2CodeLibrary/microservice/: traefik.yml
Chapter4MicroserviceGovern/Unit2CodeLibrary/Microservice/: Dockerfile  dynamic.yml  kubernetes-traefik.yaml
Chapter5MicroserviceObservability/Unit5CodeLibrary/Promethues Monitor/: Dockerfile  go.mod
Chapter5MicroserviceObservability/Unit5CodeLibrary/PromethuesMonitor/: Dockerfile  main.go  updated-deployment.yaml
Chapter6Custom/ARMS-Log-collect/: README.md  VALIDATION.md  docker-compose.yml
Chapter6Custom/ARMS-Log-collect/go-service/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
Chapter6Custom/ARMS-Log-collect/java-service/: Dockerfile  pom.xml
Chapter6Custom/ARMS-Log-collect/k8s/: go-service.yaml  java-service.yaml
Chapter6Custom/ARMS-Multilingual-Traceid/: .env  README  README.md
Chapter6Custom/ARMS-Multilingual-Traceid/cpp-svc/: .env  CMakeLists.txt  Dockerfile  main.cpp  vcpkg.json
第一章/第一节、配置docker-compose安装Jenkins/: docker-compose-jenkins.yaml
(+282 files in other folders)
